Update total owner rune

--- a/.env
+++ b/.env
@@ -1,22 +1,9 @@
-PORT = 3000
+PORT = 3002
 MONGO_URI = mongodb://lan_backend:lan_backend123@db1.silotech.vn:28000,db2.silotech.vn:28000,db3.silotech.vn:28000/lan_backend?replicaSet=replicaset-remote&authSource=admin
-WEB3_PROVIDER='https://data-seed-prebsc-1-s1.binance.org:8545/'
+WEB3_PROVIDER='http://51.79.229.100:8575/'
 
 START_BLOCK = 16626342
 STEP_BLOCK = 1000
-
-# SOIL=0xC582C0DcBfF88EB9923B3a107A3DD8021Fc38008
-# STONE=0x870aD05bC0514F254bCec8150913f1C29844EcB6
-# WOOD=0xeC43e17907b06BE3A5D9F45b9DC213879647129c
-# RUBBER=0xeF4a37EEa6F831bE1373db9f9548596A975afEee
-# PLASTIC=0x5Eed25D771a5654c036a57215b9A6fCE1A136d76
-# CRYSTAL=0x0D06D6c111D3DADBd6fdACFbd24aA1284d0175f5
-# METAL=0xEf154160D3F5cc6618213468a203828a22Fc856a
-# GEM=0x93f1f7613E91eFB05fc1D2bC5B3FB31F070D15cc
-# ONIXIUS=0xCE5663baFE18972292dB4A12eF8Db11cEEc1d9aa
-# CRYPTON=0xC7938366160356E5eDbE8330e3c5A96E2d18B023
-# PYTHIUM=0xb05b8C11b719054EeCE2dde6bD745E1EEf5a8f98
-# PARANIUM=0x8f4B780dc5FC671b958fC151691DF6794F4aA2c8
 
 # NewContract
 SOIL=	0x13586E21Cd1F7Cf691b4CCAe87C33957ef2492b6
